--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,19 +1,57 @@
-/* app/api/temperatureData/page.module.css */
-.table {
+/* Estilos generales */
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 800px;
+  margin: auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+/* Estilos para el título */
+.title {
+  text-align: center;
+  color: #333;
+}
+
+/* Estilos para la tabla */
+.temperatureTable {
   width: 100%;
   border-collapse: collapse;
+  margin-top: 20px;
 }
 
-.table th,
-.table td {
+.temperatureTable th,
+.temperatureTable td {
   border: 1px solid #ddd;
-  padding: 8px;
+  padding: 12px;
+  text-align: left;
 }
 
-.table th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
+.temperatureTable th {
+  background-color: #007bff;
+  color: white;
+  font-weight: bold;
+}
+
+.temperatureTable tr:nth-child(even) {
   background-color: #f2f2f2;
-  color: black;
+}
+
+.temperatureTable tr:hover {
+  background-color: #ddd;
+}
+
+/* Estilos para mensajes de carga y error */
+.loading, .error {
+  text-align: center;
+  color: #666;
+  font-size: 18px;
 }
